--- a/Application/Pay/View/WeiXin/mayijump_pc.html
+++ b/Application/Pay/View/WeiXin/mayijump_pc.html
@@ -98,17 +98,12 @@
 
           
             <notempty name="appid">
-           
-            <div style="width: 100%;height: 20px;"></div>
-            
-               
-
-                                <div style="width: 100%;height: 20px;"></div>
+        
                               
                                    
                                     <div class="tps_btn" style="">
                                       
-                                      <img src="<{$imgurl}>" width="80%"/>
+                                      <img src="<{$imgurl}>" width="400px"/>
                                                   </div> 
                                                   <p style="font-size:1.0rem;text-align:center;color: #f00;">
                                                     温馨提示：不得更改金额，否则无法到账！！！<br/>
