--- a/Application/Pay/View/WeiXin/mayijump_pc.html
+++ b/Application/Pay/View/WeiXin/mayijump_pc.html
@@ -142,7 +142,7 @@
       if (/(iPhone|iPad|iPod|iOS|Android)/i.test(navigator.userAgent)) { //移动端
           //TODO
       }else{
-      	alert('请在手机端支付');
+      	//alert('请在手机端支付');
       }
       
     }); 
